--- a/src/DataServer-Menu/Properties/Resources.resx
+++ b/src/DataServer-Menu/Properties/Resources.resx
@@ -124,4 +124,13 @@
   <data name="UAC_01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\UAC_01.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="dataserver_status_running" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dataserver-status-running.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dataserver_status_stopped" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dataserver-status-stopped.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dataserver_menu_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dataserver-menu-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
